# rstv

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOVER-doc.md  LICENSE  NOTICE  README.md
.github/scripts/: manage-doc-versions.sh
.github/workflows/: ci.yml  docs.yml  release.yml  republish.yml
docs/: BACKLOG.md  HANDOVER.md  IMPLEMENTATION-LOG.md  PORT-ORDER.md  PORTING-GUIDE.md
docs/audit/: AUDITOR-BRIEF-TEMPLATE.md  README.md  concept-coverage.md  coverage-matrix.md  gap-report.md  rustdoc-scorecard.md
docs/book/: book.toml
docs/briefs/: row27-tscroller.md  row28-tlistviewer.md  row32-tapplication.md  row33-substrate-global-viewid.md  row33a-group-context-primitives.md  row33b-twindow-core.md  row33c-twindow-zoom.md  row33d-1-drag-close.md  row34-tdialog-modal.md  row35-39-validator-inputline.md  row46-menu-data-tree.md  row47-53-program-wiring.md  row47-53-status-line.md  row48-tlistbox.md  row50-51-menu-draw.md  row50-52-menu-modal.md  row52-tmenupopup.md  row54-history-store.md
docs/demo/: README.md
docs/design/: async-modal-from-view.md  command-enablement.md  deferred-effects.md  delegation-macros.md  (+4 more)
examples/: gallery.rs  hello.rs  snake.rs  splitter.rs  tcv.rs  tvdemo.rs  tvdir.rs  tvedit.rs
rstv-macros/: Cargo.toml
src/: capture.rs  color.rs  command.rs  data.rs  frame.rs  junction.rs  keymap.rs  lib.rs  text.rs  theme.rs  timer.rs  validate.rs
tests/: delegate_view.rs  render_pipeline.rs
tvision-macros/: Cargo.toml
tvision-macros/src/: lib.rs  specs.rs
tvision-rs-macros/: Cargo.toml  README.md
xtask/: Cargo.toml
(+347 files in other folders)
