[package]
name = "tvision-macros"
version = "0.1.0"
edition = "2024"
description = "Internal proc-macros for the tvision crate (delegation boilerplate)."
license = "MIT"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "3"

[dev-dependencies]
trybuild = "1"
